--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
           <picture>
             <source
-              media="(min-width:700px)"
+              media="(min-width:43.75rem)"
               srcset="images/image-product-desktop.jpg"
             />
             <img
