--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="image">
         <picture>
           <source
-            media="(min-width:700px)"
+            media="(min-width: 43.75rem)"
             srcset="images/image-product-desktop.jpg"
           />
           <img
@@ -37,8 +37,8 @@
       </div>
       <div class="content">
         <hgroup>
-          <p class="parfume">Perfume</p>
-          <h1 class="h1">Gabrielle Essence Eau De Parfum</h1>
+          <h1 class="parfume">Perfume</h1>
+          <h2 class="h1">Gabrielle Essence Eau De Parfum</h2>
         </hgroup>
 
         <p class="paragraph">
